0.0.49 - SD 1.0.46. Fix issue on Videos page where vertical scrollbar appears in smartdown-outer-container.

--- a/app/style.css
+++ b/app/style.css
@@ -186,6 +186,10 @@ div.container-fluid .row.smartdown-frame {
   vertical-align: unset;
 }
 
+.smartdown-outer-container {
+  overflow-y: hidden !important;
+}
+
 .smartdown-outer-container.source-visible {
   margin: 0;
 }
